fixed z-index of sidemenu trigger, because on fileupload it was higher than the file upload dialog

--- a/prototype/prioss/src/app/app.component.less
+++ b/prototype/prioss/src/app/app.component.less
@@ -45,7 +45,7 @@ footer {
   transition: all 0.2s;
   width: 50px;
   height: 50px;
-  z-index: 5000;
+  z-index: 3;
   position: sticky;
   top: 0px;
   box-shadow: 6px 0 6px -3px rgba(0, 21, 41, 0.35);
